# genemiv2

./: .gitignore  CMakeLists.txt  README.md  case_config.py  compile.py  extract_mesh.py  extract_surfaces.py  paths.py  pipeline.py  pipeline_server.py  post_append.blend  post_append.blend1  postprocess_pipeline.py  random_breast_pipeline.py  run_simulation.py  time_units.py
APP/: pipeline.py  pipeline_server.py
APP/utils/: case_config.py  paths.py  run_simulation.py
APP/web/: app.js  index.html
blender_pipeline/: bake_metallic.py
blender_pipeline/Output/Brain_extracted_108/BrainTumor_extracted_108_unity/: BrainTumor_extracted_108.fbx
blender_pipeline/Shaders/: badguy_2.blend1
breast_scripts/: CMakeLists.txt  breast_128_augmented_lobules_points.csv  create_internal_volumes.py  create_mesh_refinements.py  extract_material_meshes.py  split_mesh_half_x.py
breast_scripts/segmentations/: Segmentation_Breast_MRI_076_Dense_and_Vessels_Vessels.stl  dense.stl  new_fat.stl  vessels.stl
breast_scripts/src/: FisherKolmogorov.cpp  FisherKolmogorov.hpp  main.cpp  mesh_data.hpp
mesh/breast/: create_full_mesh.py
mesh/breast/utils/: create_internal_volumes.py  create_mesh_refinements.py
mesh/breast/utils/segmentation_surfaces/: skin.stl
post_process/: extract_mesh.py  extract_surfaces.py  postprocess_pipeline.py
post_process/blender_pipeline/Shaders/: badguy_2.blend
post_process/blender_pipeline/old/: bake_metallic.py
src/: FisherKolmogorov.cpp  main.cpp  mesh_data.hpp
web/: app.js  index.html  styles.css
